syntax = "proto3";

package demo;

option java_package = "com.airwallex.grpc.demo";

service Greeter {
  rpc SayHello(HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
